Support up to Kotlin 1.9.20 for executing code via Kotlin Playground